2018-02-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Return 0 when NULL.

2018-01-23  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.8.

	* src/Makefile (build/gnuk-vidpid.elf): Supply FILE here.
	* src/configure (output_vendor_product_serial_strings): For
	generating put-vid-pid-ver.sh, don't set FILE.

	* regnual/regnual.c (regnual_device_desc): Make this array as a
	template.
	* regnual/Makefile (regnual.elf): Substitute VID:PID.

2018-01-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (USER_PASSWD_MINLEN): New.
	(cmd_change_password): Check passphrase length.

2018-01-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_change_password): Remove access to private
	key with BY_ADMIN when it's becoming admin-less mode.

2018-01-19  NIIBE Yutaka  <gniibe@fsij.org>

	* src/binary-edit.sh: Copied from NeuG 1.0.8.  Exclude FILE.
	* src/configure (output_vid_pid_version): Generate a shell script.
	* src/Makefile (build/gnuk-vidpid.elf): New target.
	* src/usb_desc.c (device_desc): Make this array as a template.

	* chopstx: Update to 1.8.

2018-01-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.c: Update from NeuG.

2018-01-09  NIIBE Yutaka  <gniibe@fsij.org>

	* tests/card_reader.py (CardReader.ccid_power_on): Fix for
	other card readers for Gemalto's.

2017-12-19  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.7.

2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_change_password): Bug fix for admin-less
	mode.

2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.7.

2017-11-24  NIIBE Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (calc_crc32): Enable CRC module fix.

	* chopstx: Update to 1.6.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/stack-def.h (SIZE_0): Decrease.

	* src/main.c (emit_led, display_status_code, main): Use
	chopstx_poll instead of eventflag_wait_timeout.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/stack-def.h (SIZE_0): Increase.
